--- a/site.yml
+++ b/site.yml
@@ -24,8 +24,11 @@
   remote_user: root
   tasks: 
 
+    - name: Save license
+      raw: echo "steamcmd steam/question string {{ steam_license }}" >/tmp/selections
+
     - name: Agree to license 
-      raw: echo steamcmd steam/question string {{ steam_license }} | debconf-set-selections
+      raw: echo "steamcmd steam/question string {{ steam_license }}" | debconf-set-selections
 
     - name: Install steamcmd
       apt:
